force-app/main/default/objects/Account_Affiliation_History__c/fields/Affiliation_Name__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_Name__c</fullName>
    <label>Affiliation Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>