force-app/main/default/objects/Account_Affiliation_History__c/fields/Affiliation_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_Record_Type__c</fullName>
    <label>Affiliation Record Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>