force-app/main/default/objects/Account_Affiliation_History__c/fields/Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>Operation_Type__c</fullName>
    <label>Operation Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>