force-app/main/default/objects/Account_Affiliation_History__c/fields/Removed_By__c.field-meta.xml
<CustomField>
    <fullName>Removed_By__c</fullName>
    <label>Removed By</label>
    <length>30</length>
    <type>Text</type>
</CustomField>